# MySql_Project

./: CMakeLists.txt  README.md  main.cpp
Controller/: Login.cpp  Menu.cpp  Register.cpp
Controller/Header/: Controller.h
Database/: Database.h  database_settings.json
Model/: CreateModel.h  User.h  Validators.h
